# v2x_if_ros_msg

./: .ci  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  ci.env  v2x_if_ros_msg.mk
v2x_if_ros_msg/: CMakeLists.txt  README.md
v2x_if_ros_msg/cam_v2/: CMakeLists.txt  README.md  package.xml
v2x_if_ros_msg/cam_v2/msg/: BasicContainer.msg  BasicVehicleContainerHighFrequency.msg  BasicVehicleContainerLowFrequency.msg  CAM.msg  CamParameters.msg  CoopAwareness.msg  DangerousGoodsContainer.msg  EmergencyContainer.msg  GenerationDeltaTime.msg  HighFrequencyContainer.msg  LowFrequencyContainer.msg  PublicTransportContainer.msg  RSUContainerHighFrequency.msg  RescueContainer.msg  RoadWorksContainerBasic.msg  SafetyCarContainer.msg  SpecialTransportContainer.msg  SpecialVehicleContainer.msg
v2x_if_ros_msg/cpm_v1_19/: CMakeLists.txt  package.xml
v2x_if_ros_msg/cpm_v1_19/cpm_v1_19_cpm_commondatatypes_descriptions/: CMakeLists.txt
v2x_if_ros_msg/cpm_v1_19/cpm_v1_19_cpm_freespaceaddendum_descriptions/: CMakeLists.txt
v2x_if_ros_msg/cpm_v1_19/cpm_v1_19_cpm_originatingstationdata_descriptions/: CMakeLists.txt
v2x_if_ros_msg/cpm_v1_19/cpm_v1_19_cpm_pdu_descriptions/: CMakeLists.txt
v2x_if_ros_msg/cpm_v1_19/cpm_v1_19_cpm_perceivedobject_descriptions/: CMakeLists.txt
v2x_if_ros_msg/cpm_v1_19/cpm_v1_19_cpm_sensorinformation_descriptions/: CMakeLists.txt
v2x_if_ros_msg/denm_v2/: CMakeLists.txt  README.md  dependencies.txt
v2x_if_ros_msg/dsrc_v2/: README.md
v2x_if_ros_msg/dsrc_v2/dsrc_v2_addgrpc/: CMakeLists.txt  package.xml
v2x_if_ros_msg/dsrc_v2/dsrc_v2_addgrpc/msg/: BatteryStatus.msg  ConnectionManeuverAssist_addGrpC.msg  ConnectionTrajectory_addGrpC.msg  EmissionType.msg  ExceptionalCondition.msg  IntersectionState_addGrpC.msg  ItsStationPosition.msg  ItsStationPositionList.msg  LaneAttributes_addGrpC.msg  MapData_addGrpC.msg  MovementEvent_addGrpC.msg  Node.msg  NodeAttributeSet_addGrpC.msg  NodeLink.msg  Node_id.msg  Position3D_addGrpC.msg  PrioritizationResponse.msg  PrioritizationResponseList.msg  PtvRequestType.msg  RejectedReason.msg  RequestorDescription_addGrpC.msg  RestrictionUserType_addGrpC.msg  SignalHeadLocation.msg  SignalHeadLocationList.msg  SignalStatusPackage_addGrpC.msg  TimeReference.msg
v2x_if_ros_msg/dsrc_v2/dsrc_v2_aviaeinumberinganddatastructures/: CMakeLists.txt  package.xml
v2x_if_ros_msg/dsrc_v2/dsrc_v2_aviaeinumberinganddatastructures/msg/: CountryCode.msg  IssuerIdentifier.msg
v2x_if_ros_msg/dsrc_v2/dsrc_v2_dsrc/: CMakeLists.txt  package.xml
v2x_if_ros_msg/dsrc_v2/dsrc_v2_dsrc/msg/: AdvisorySpeed.msg  AdvisorySpeedList.msg  AdvisorySpeedType.msg  AllowedManeuvers.msg  Angle.msg  AntennaOffsetSet.msg  ApproachID.msg  BasicVehicleRole.msg  ComputedLane.msg  ComputedLane_offsetXaxis.msg  ComputedLane_offsetYaxis.msg  ConnectingLane.msg  Connection.msg  ConnectionManeuverAssist.msg  ConnectsToList.msg  DDateTime.msg  DDay.msg  DHour.msg  DMinute.msg  DMonth.msg  DOffset.msg  DSRCmsgID.msg  DSecond.msg  DYear.msg  DataParameters.msg  DataParameters_geoidUsed.msg  DataParameters_lastCheckedDate.msg  DataParameters_processAgency.msg  DataParameters_processMethod.msg  DeltaAngle.msg  DeltaTime.msg  DescriptiveName.msg  DrivenLineOffsetLg.msg  DrivenLineOffsetSm.msg  Elevation.msg  ElevationConfidence.msg  EnabledLaneList.msg  FuelType.msg  FullPositionVector.msg  GNSSstatus.msg  (+135 more)
v2x_if_ros_msg/dsrc_v2/dsrc_v2_efcdsrcapplication/: CMakeLists.txt  package.xml
v2x_if_ros_msg/dsrc_v2/dsrc_v2_efcdsrcapplication/msg/: AxleWeightLimits.msg  CopValue.msg  DieselEmissionValues.msg  DieselEmissionValues_particulate.msg  EuroValue.msg  (+13 more)
v2x_if_ros_msg/dsrc_v2/dsrc_v2_electronicregistrationidentificationvehicledatamodule/: CMakeLists.txt  package.xml
v2x_if_ros_msg/dsrc_v2/dsrc_v2_mapem_pdu_descriptions/: CMakeLists.txt  package.xml
v2x_if_ros_msg/dsrc_v2/dsrc_v2_spatem_pdu_descriptions/: CMakeLists.txt  package.xml
v2x_if_ros_msg/dsrc_v2/dsrc_v2_srem_pdu_descriptions/: CMakeLists.txt  package.xml
v2x_if_ros_msg/dsrc_v2/dsrc_v2_ssem_pdu_descriptions/: CMakeLists.txt  package.xml
v2x_if_ros_msg/its_container_v2/: CMakeLists.txt  README.md  dependencies.txt  package.xml
v2x_if_ros_msg/its_container_v2/msg/: AccelerationConfidence.msg  AccelerationControl.msg  AccidentSubCauseCode.msg  ActionID.msg  AdverseWeatherCondition_AdhesionSubCauseCode.msg  AdverseWeatherCondition_ExtremeWeatherConditionSubCauseCode.msg  AdverseWeatherCondition_PrecipitationSubCauseCode.msg  AdverseWeatherCondition_VisibilitySubCauseCode.msg  Altitude.msg  AltitudeConfidence.msg  AltitudeValue.msg  CauseCode.msg  CauseCodeType.msg  CenDsrcTollingZone.msg  CenDsrcTollingZoneID.msg  ClosedLanes.msg  CollisionRiskSubCauseCode.msg  Curvature.msg  CurvatureCalculationMode.msg  CurvatureConfidence.msg  CurvatureValue.msg  DangerousEndOfQueueSubCauseCode.msg  DangerousGoodsBasic.msg  DangerousGoodsExtended.msg  DangerousGoodsExtended_companyName.msg  DangerousGoodsExtended_elevatedTemperature.msg  DangerousGoodsExtended_emergencyActionCode.msg  DangerousGoodsExtended_limitedQuantity.msg  DangerousGoodsExtended_tunnelsRestricted.msg  DangerousGoodsExtended_unNumber.msg  DangerousSituationSubCauseCode.msg  DeltaAltitude.msg  DeltaLatitude.msg  DeltaLongitude.msg  DeltaReferencePosition.msg  DigitalMap.msg  DriveDirection.msg  DrivingLaneStatus.msg  EmbarkationStatus.msg  EmergencyPriority.msg  (+102 more)
v2x_if_ros_msg/mcm_dmove/: CMakeLists.txt  package.xml
v2x_if_ros_msg/mcm_transaid/: CMakeLists.txt  package.xml
v2x_if_ros_msg/mcm_transaid/msg/: BasicContainer.msg  MCM.msg  TrajectoryPoint.msg  VehicleManeuver.msg
v2x_if_ros_msg/odds/: CMakeLists.txt
v2x_if_ros_msg/strp_fau/: CMakeLists.txt  package.xml
v2x_if_ros_msg/strp_fau/msg/: Accept.msg  PositionGate.msg  ReferencePosition.msg  Reject.msg  Request.msg  SpaceTimeReservationProcedure.msg  TimeGate.msg
v2x_if_ros_msg/v2x_msgs/: CMakeLists.txt  package.xml
(+12 files in other folders)
