# ********************************************************************************
# * Copyright (C) 2017-2020 German Aerospace Center (DLR). 
# * Eclipse ADORe, Automated Driving Open Research https://eclipse.org/adore
# *
# * This program and the accompanying materials are made available under the 
# * terms of the Eclipse Public License 2.0 which is available at
# * http://www.eclipse.org/legal/epl-2.0.
# *
# * SPDX-License-Identifier: EPL-2.0 
# *
# * Contributors: 
# *   Thomas Lobig
# ********************************************************************************

cmake_minimum_required(VERSION 2.8.3)
project(v2x_if_ros_msg)

add_subdirectory(its_container_v2)
add_subdirectory(cam_v2)

